--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#kontak">Kontak kami</a>
                     </li>
+                    <ul li class="nav-item">
+                        <a class="nav-link" href="Login-Pengguna.html">Daftar</a> 
+                    </li>
+                    <ul li class="nav-item">
+                        <a class="nav-link" href="Login-Admin.html">Admin</a> 
+                    </ul>
+                    
 
                 </ul>
             </div>
